--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Jesus Christ -- Biography'
 - !lcc 'BT'
+- GITenberg
 title: 'His Life: A Complete Story in the Words of the Four Gospels'
 url: http://www.gutenberg.org/ebooks/16184
